<resources>
    <string name="app_name">Connect4Blood</string>
    <string name="user_icon">user_icon</string>
    <string name="i_am">I AM</string>
    <string name="donor_txt">Donor</string>
    <string name="recipient_txt">Recipient</string>
    <string name="title_activity_donor_login">DonorLoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_txt">Please enter your email address, password and press login button to continue</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_background">login background</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="close_icon">close icon</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_as_donor">Register as Donor</string>
    <string name="donor_registration">Donor Registration</string>
    <string name="donor_reg_txt">Please enter your details and click on send otp button to authenticate yourself and register on the platform</string>
    <string name="mobile_no_hint">Mobile No</string>
    <string name="send_otp">Send OTP</string>
    <string name="full_name_hint">Full Name</string>
    <string name="reg_email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="donor_reg_terms"><b>I agree</b> that i am 18 years or older and i am registering on this platform voluntarily. Please read the <b>Terms</b> before you proceed.</string>
    <string name="terms_of_registration">Terms of Registration</string>
    <string name="reset_password">Reset Password</string>
    <string name="pass_reset_txt">Enter your mobile number and press send otp button to authenticate yourself</string>
    <string name="reset_pass_txt">Please enter your new password, confirm password and click on submit button to reset your password</string>
    <string name="authentication">Authentication</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="otp_verify_head">Enter the OTP sent on your mobile number</string>
    <string name="otp">One Time Password (OTP)</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="loading">loading…</string>
    <string name="verifying_otp">Verifying OTP…</string>
    <string name="otp_resend">OTP Sent!</string>
    <string name="home">Home</string>
    <string name="active_requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="donor_home_page">Donor Home Page</string>
    <string name="donor_requests_page">Donor Requests Page</string>
    <string name="donor_profile_page">Donor Profile Page</string>
    <string name="donor_settings_page">Donor Settings Page</string>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipient_login_txt">Please enter your mobile number and click on Send OTP button to authenticate yourself</string>
    <string name="recipient_dashboard">Recipient Dashboard</string>
    <string name="history">History</string>
    <string name="tab_layout_txt">Recipient Dashboard Tab Menu</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="raise_complaint">Raise Complaint</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="donor_search">Donor Search</string>
    <string name="search_donors">Search Donors</string>
    <string name="search_donors_nearby">Search Donors Nearby</string>
    <string name="donor_search_txt">Fill in all the required details and click on search button to search for the blood donors in your surrounding areas.</string>
    <string name="recipient_requester_name">Recipient Name</string>
    <string name="units_required">Units Required</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="search">Search</string>
    <string name="terms_of_usage">Terms of Usage</string>
    <string name="donor_search_terms"><b>I agree </b>to all the terms of using this platform.</string>
    <string name="within_radius">Within Radius(KM) (optional)</string>
    <string name="test_key_string">Test Key String</string>
    <string name="test_value_string">Test Value String</string>
    <string name="request_status">Request Status</string>
    <string name="donor_search_status_txt">Your request was processed successfully. Donors in your locality have been notified and we are waiting for them to accept your request.</string>
    <string name="request_id">Request ID:</string>
    <string name="request_id_placeholder">ID: vhscj3hxi3</string>
    <string name="recipient_name">Recipient Name:</string>
    <string name="rakesh_kumar">Rakesh Kumar</string>
    <string name="blood_group_placeholder">Blood Group:</string>
    <string name="b_ve">B+Ve</string>
    <string name="units_required_placeholder">Units Required:</string>
    <string name="_2">2</string>
    <string name="status">Status:</string>
    <string name="pending">Pending</string>
    <string name="request_fulfilled">Request Fulfilled</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="donors_list"><u>Donors List:</u></string>
    <string name="waiting_for_donors">Waiting for donors…</string>
    <string name="donor_profile_pic">donor profile pic</string>
    <string name="donor_name_placeholder">Amit Kumar</string>
    <string name="_22">22</string>
    <string name="comma">,</string>
    <string name="male">Male</string>
    <string name="contact_donor">Contact Donor</string>
    <string name="replace_donor">Replace Donor</string>
    <string name="empty_box_icon">empty box icon</string>
    <string name="no_record_exists">No Record Exists!</string>
    <string name="request_history_id_format">ID: %1$s</string>
    <string name="request_history">Request History</string>
    <string name="request_history_sub_head">All your blood requests can be viewed on this page including any request that is still in progress.</string>
    <string name="refresh">Refresh</string>
    <string name="request_pending">Request Pending</string>
    <string name="request_confirmed">Request Confirmed</string>
    <string name="donor_search_confirmed_txt">Your request was accepted by the donors from your locality and they are on their way to your location. You can contact them using the phone no given below if necessary.</string>
    <string name="details"><u>Details:</u></string>
    <string name="request_date">Request Date:</string>
    <string name="incoming_requests">Incoming Requests</string>
    <string name="donor_home_subhead_txt">All the blood donation requests from your locality can be seen here. You can accept one according to your convenience.</string>
    <string name="recipient_name_placeholder">Sebastian Stan</string>
    <string name="pipe_op">|</string>
    <string name="_2_units">2 Units</string>
    <string name="location_placeholder">Location:</string>
    <string name="_2_4_km">2.4 Km</string>
    <string name="address_placeholder">Williams Town, Deoghar, JH</string>
    <string name="address">Address:</string>
    <string name="accept">Accept</string>
    <string name="city_hospital">City Hospital</string>
    <string name="distance_format">%1$s Km</string>
    <string name="pending_request">Pending Request</string>
    <string name="active_request">Active Request</string>
    <string name="donor_active_request_sub_head">You can manage your active blood donation request on this page. You will get notified once the donor pool is filled completely.</string>
    <string name="distance">Distance</string>
    <string name="donors_pool_status">Donors Pool Status:</string>
    <string name="_1_2">1/2</string>
    <string name="pending_caps">PENDING</string>
    <string name="donors_found">Donors Found:</string>
    <string name="directions">Directions</string>
    <string name="button_placeholder">button placeholder</string>
    <string name="distance_placeholder">Calculating…</string>
    <string name="donors_pool_status_format">%1$d/%2$d</string>
    <string name="distance_error">Unknown</string>
    <string name="recipient_details"><u>Recipient Details:</u></string>
    <string name="blood_units_format">%1$d Units</string>
    <string name="distance_new">Distance:</string>
    <string name="hospital_name_distance_view_format">%1$s (%2$s Km)</string>
    <string name="request_cancelled">Request Cancelled</string>
    <string name="donation_history">Blood Donation History</string>
    <string name="update_mobile_number">Update Mobile Number</string>
    <string name="update_email_address">Update Email Address</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="change_password">Change Password</string>
    <string name="about_us_txt">Connect4Blood is a social platform which connects blood donors directly to the recipients. It was developed by a group of four B-Tech Students as their final year project. The prime objective of this project is to provide a social platform for blood donors and recipients. It will allow the donors to donate their blood as and when required according to their free will. Also blood donation on this platform is completely voluntary. Donors don’t have to feel obliged to donate their blood after registering on this platform or even after receiving a blood donation request. It reduces the dependency on replacement donors in the form of family, friends or relatives.</string>
    <string name="developers_credit"><u>Developers Credit:</u></string>
    <string name="aniket_dev_txt">Aniket Raj (Project lead and Backend Developer)</string>
    <string name="saurav_dev_txt">Kumar Saurav (Backend Developer)</string>
    <string name="ajit_dev_txt">Ajit Kumar Pandey (UI/UX Designer)</string>
    <string name="yishank_dev_txt">Yishank Kumar (UI/UX Designer)</string>
    <string name="declaration_1">a) I am 18 years or older and haven\'t donated blood in the past 3 months.</string>
    <string name="declaration_2">b) blood donation is a totally voluntary act and no inducement or remuneration will be offered.</string>
    <string name="declaration_3">c) donation of blood/ components is a medical procedure and that by donating voluntarily, I accept the risks associated with this procedure.</string>
    <string name="declaration_4">d) my blood will be tested for Hepatitis B, Hepatitis-C, malaria Parasite, HIV/AIDs and veneral diseases in addition to any other screening tests required to ensure blood safety.</string>
    <string name="declaration_head">I understand that</string>
    <string name="accept_declaration">I have read and accept all the terms mentioned above.</string>
    <string name="cancel">Cancel</string>
</resources>