<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DonorDashboardSettings"
    android:background="@drawable/gradient_primary_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="22sp"
            android:paddingHorizontal="18dp"
            android:layout_marginBottom="10dp"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/shimmer_bg"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/txtBDHistory"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_history"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_blood_type_dark"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDUpdateMobile"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_mobile_number"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_mobile_no"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDUpdateEmail"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_email_address"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_email"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDUpdatePassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_lock_reset"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDCloseAccount"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deactivate_account"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_delete"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDComplaint"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raise_complaint"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_support"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDShare"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refer_a_friend"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_share"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDFaqs"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faqs"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_help"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtBDLogout"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_logout" />



    </LinearLayout>

</ScrollView>