<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:orientation="vertical"
    tools:context=".fragments.BloodRequestDetails">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLoader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="200dp"
                android:layout_height="8dp"
                android:background="@color/shimmer_bg"
                android:layout_marginBottom="8dp"/>
            <View
                android:layout_width="200dp"
                android:layout_height="8dp"
                android:background="@color/shimmer_bg"
                android:layout_marginBottom="8dp"/>
            <View
                android:layout_width="200dp"
                android:layout_height="8dp"
                android:background="@color/shimmer_bg"
                android:layout_marginBottom="8dp"/>
            <View
                android:layout_width="200dp"
                android:layout_height="8dp"
                android:background="@color/shimmer_bg"
                android:layout_marginBottom="8dp"/>
            <View
                android:layout_width="200dp"
                android:layout_height="8dp"
                android:background="@color/shimmer_bg"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/llBloodRequestDescContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/request_id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBloodRequestId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_id_placeholder"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/request_date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBloodRequestDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_id_placeholder"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/recipient_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBloodRequestRecipientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rakesh_kumar"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/blood_group_placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBloodRequestBloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_ve"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/units_required_placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBloodRequestReqUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/status"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBloodRequestStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBloodRequestFinish"
                style="?android:attr/buttonBarPositiveButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/blue_700"
                android:text="@string/request_fulfilled"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnBloodRequestCancel"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/cancel_request"
                android:textAllCaps="false"
                android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
