<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="2dp"
    app:cardCornerRadius="12dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginBottom="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/txtBloodRequestId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_id_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="22dp"
            android:layout_marginVertical="8dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/shimmer_bg"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_group_placeholder"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/txtBloodRequestBloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_ve"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/units_required_placeholder"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/txtBloodRequestReqUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/txtBloodRequestStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/yellow_500"
                />

        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>